--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ include_directories(
 add_executable(Game
         Source/assets/imagesrc.qrc
         Source/main.cpp
-        Source/mainwindow.cpp Source/Headers/mainwindow.h Source/Forms/mainwindow.ui
-        )
+        Source/Headers/mainwindow.h
+        Source/gameplay.cpp Source/Headers/gameplay.h Source/Forms/gameplay.ui Source/mainwindow.cpp Source/Headers/mainwindow.h Source/Forms/mainwindow.ui)
 target_link_libraries(Game
         Qt5::Core
         Qt5::Gui
